XIVY-14658 Improve tables
- streamline look by using same elements on all tables
- adjust width and responsivePriority
- Add on rowClick action on case details task list
- rename "My tasks" to "Open tasks"
- move cockpit button from topbar to "Developer" submenu

--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -23,10 +23,10 @@
     <jc:user user="#{case.creatorUser}" id="creatorUser" />
 
     <h:outputText value="State" />
-    <h:outputText>
-      <i class="si si-#{casesIvyDevWfBean.getStateIcon(case.businessState)} mr-1"></i>
+    <h:panelGroup layout="block" styleClass="flex align-items-center">
+      <i class="si si-#{casesIvyDevWfBean.getStateIcon(case.businessState)} mr-1" />
       <h:outputText value="#{case.businessState} (#{case.state})" id="caseState" />
-    </h:outputText>
+    </h:panelGroup>
 
     <h:outputText value="Category" />
     <h:outputText value="#{case.category.name}" id="category" />
