--- a/dev-workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -5,8 +5,8 @@
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
   <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" styleClass="ui-fluid"
-    emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rows="10" paginator="true" paginatorAlwaysVisible="false"
-    selectionMode="single">
+    emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rows="10" paginator="true"
+    paginatorAlwaysVisible="false" selectionMode="single">
     <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" update="@form" />
     <f:facet name="header">
       <div class="ui-input-icon-left filter-container">
@@ -14,6 +14,11 @@
         <p:inputText id="globalFilter" onkeyup="PF('tasksTable').filter()" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}" />
       </div>
     </f:facet>
+
+    <p:column styleClass="icon-row" responsivePriority="4" width="0">
+      <h:outputText id="taskIcon" class="si si-lg si-task-list-edit" />
+      <p:tooltip for="taskIcon" value="Task: #{task.uuid}" position="top" />
+    </p:column>
 
     <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
       <h:outputText id="taskState" styleClass="si si-lg si-#{task.stateIcon}" />
@@ -25,26 +30,28 @@
       <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
     </p:column>
 
-    <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}">
+    <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
       <h:commandLink action="#{tasksIvyDevWfBean.redirectToTaskDetails(task)}">
         <h:outputText id="taskName" value="#{task.name}" />
-        <p:tooltip for="taskName" value="Task: #{task.uuid}" position="top" />
       </h:commandLink>
     </p:column>
 
-    <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}">
+    <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}"
+      width="160" responsivePriority="3">
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="2">
+    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" sortOrder="descending"
+      responsivePriority="3" width="100">
       <jc:time id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" responsivePriority="3">
+    <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" responsivePriority="4"
+      width="100">
       <jc:time id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
-    <p:column styleClass="table-btn-1" responsivePriority="2">
+    <p:column styleClass="table-btn-1" responsivePriority="2" width="10">
       <p:link href="#{task.detailUrl}" >
         <i class="si si-information-circle detail-btn"/>
       </p:link>
