--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -78,36 +78,36 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-layout-bullets"></i>
-                  <h6 class="m-0">My tasks</h6>
+                  <h6 class="m-0">Open tasks</h6>
                 </div>
               </div>
               <p:dataTable id="activeTasks" var="task" value="#{personalTasksIvyDevWfBean.tasksDataModel}" lazy="true"
                 rows="6" paginator="true" paginatorAlwaysVisible="false" rendered="#{homepageIvyDevWfBean.tasksSize gt 0}"
                 paginatorPosition="bottom" selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{personalTasksIvyDevWfBean.executeTaskRow}" />
-                <p:column styleClass="icon-row" responsivePriority="4">
-                  <i class="si si-lg si-task-list-edit" />
+                <p:column styleClass="icon-row" responsivePriority="4" width="0">
+                  <h:outputText id="taskIcon" class="si si-lg si-task-list-edit" />
+                  <p:tooltip for="taskIcon" value="Task: #{task.uuid}" position="top" />
                 </p:column>
-                <p:column styleClass="icon-row" sortBy="#{task.priority}">
+                <p:column styleClass="icon-row" sortBy="#{task.priority}" width="10">
                   <h:outputText id="taskPrio" styleClass="si si-lg si-#{task.priorityIcon}" />
                   <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
                 </p:column>
                 <p:column headerText="Name" sortBy="#{task.name}" responsivePriority="1" width="140">
                   <p:commandLink id="startTaskLink" actionListener="#{personalTasksIvyDevWfBean.executeTask(task)}">
                     <h:outputText id="taskName" value="#{task.name}" />
-                    <p:tooltip for="taskName" value="Task: #{task.uuid}" position="top" />
                   </p:commandLink>
                 </p:column>
                 <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}"
-                  responsivePriority="3" sortOrder="descending" width="100">
+                  responsivePriority="3" sortOrder="descending" width="80">
                   <jc:time id="startTime" datetime="#{task.startTimestamp}" />
                 </p:column>
                 <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}"
-                  responsivePriority="2" width="100">
+                  responsivePriority="2" width="80">
                   <jc:time id="expiryTime" datetime="#{task.expiryTimestamp}" />
                 </p:column>
-                <p:column styleClass="table-btn-1">
-                  <p:link href="#{task.detailUrl}" id="taskDetailsIcon" style="float: inline-end">
+                <p:column styleClass="table-btn-1" width="5">
+                  <p:link href="#{task.detailUrl}" id="taskDetailsIcon" >
                     <i class="si si-information-circle detail-btn" />
                     <p:tooltip for="taskDetailsIcon" value="Open task details" position="top" />
                   </p:link>
@@ -132,11 +132,22 @@
                 paginatorPosition="bottom" rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false"
                 selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
+
+                <p:column styleClass="icon-row" responsivePriority="2" width="0">
+                  <h:outputText id="caseIcon" styleClass="si si-lg si-task-list-approve" />
+                  <p:tooltip for="caseIcon" value="Case: #{case.uuid()}" position="top" />
+                </p:column>
+
+                <p:column filterBy="#{case.state}" styleClass="icon-row" sortBy="#{case.state}">
+                  <h:outputText id="caseState" styleClass="si si-#{casesIvyDevWfBean.getStateIcon(case.businessState)}"
+                    style="font-size: 1.4rem" />
+                  <p:tooltip for="caseState" value="State: #{case.businessState} (#{case.state})" position="top" />
+                </p:column>
+
                 <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.name}">
                   <h:link outcome="case">
                     <f:param name="id" value="#{case.uuid()}" />
                     <h:outputText id="caseName" value="#{casesIvyDevWfBean.getName(case)}" />
-                    <p:tooltip for="caseName" value="Case: #{case.uuid()}" position="top" />
                   </h:link>
                 </p:column>
 
@@ -150,7 +161,7 @@
                   <jc:time id="endTime" datetime="#{case.endTimestamp}"/>
                 </p:column>
 
-                <p:column width="60">
+                <p:column width="40">
                   <p:link id="rerunCaseIcon" href="#{homepageIvyDevWfBean.getCaseRerunLink(case)}"
                     styleClass="text-color mr-2">
                     <i class="si si-button-refresh-arrow text-2xl" />
