--- a/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -11,7 +11,7 @@
       <h:form id="menuform">
         <pm:menu widgetVar="sidebar_menu">
           <p:menuitem id="sr_home" value="Home" icon="si si-house-1" url="home.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('home') ? 'active-menuitem' : ''}" />
-          <p:menuitem id="sr_starts" value="Starts" icon="si si-navigation-menu" url="starts.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('starts') ? 'active-menuitem' : ''}" />
+          <p:menuitem id="sr_starts" value="Processes" icon="si si-navigation-menu" url="starts.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('starts') ? 'active-menuitem' : ''}" />
           <p:menuitem id="sr_tasks" value="Tasks" icon="si si-layout-bullets" url="tasks.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('tasks') ? 'active-menuitem' : ''}" />
           <p:menuitem id="sr_cases" value="Cases" icon="si si-task-list-approve" url="cases.xhtml" containerStyleClass="#{sidebarIvyDevWfBean.isActive('cases') ? 'active-menuitem' : ''}" />
           <p:submenu id="sr_actions" label="Developer" icon="si si-tools-wench" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}" styleClass="#{sidebarIvyDevWfBean.isActive('signals', 'intermediateEvents', 'cleanup', 'api-browser') ? 'active-menuitem' : ''}">
@@ -20,6 +20,7 @@
             <p:menuitem id="sr_cleanup" value="Cleanup" icon="si si-recycling-trash-bin-2" url="cleanup.xhtml" rendered="#{engineModeIvyDevWfBean.demoOrDesigner}" styleClass="#{sidebarIvyDevWfBean.isActive('cleanup') ? 'active-submenu' : ''}"/>
             <p:menuitem id="sr_api-browser" value="API Browser" icon="si si-network-browser" url="api-browser.xhtml" styleClass="#{sidebarIvyDevWfBean.isActive('api-browser') ? 'active-submenu' : ''}"/>
             <p:menuitem id="sr_statistics" value="Statistics" icon="si si-analytics-graph" url="statistics.xhtml" styleClass="#{sidebarIvyDevWfBean.isActive('statistics') ? 'active-submenu' : ''}"/>
+            <p:menuitem id="sr_webservices" value="Web Service" icon="si si-network-arrow" url="webservices.xhtml" styleClass="#{sidebarIvyDevWfBean.isActive('webservices') ? 'active-submenu' : ''}"/>
             <p:menuitem id="sr_engine-cockpit" value="Engine Cockpit" icon="si si-cog" url="#{sidebarIvyDevWfBean.cockpitPath}"/>
           </p:submenu>
         </pm:menu>
