--- a/dev-workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -4,14 +4,31 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
-  <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" styleClass="ui-fluid"
-    emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rows="10" paginator="true"
-    paginatorAlwaysVisible="false" selectionMode="single">
-    <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" update="@form" />
+  <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable"
+    styleClass="ui-fluid" emptyMessage="No Tasks found with given criteria" paginatorPosition="bottom" rows="10"
+    lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
+    <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" />
     <f:facet name="header">
-      <div class="ui-input-icon-left filter-container">
-        <i class="pi pi-search"/>
-        <p:inputText id="globalFilter" onkeyup="PF('tasksTable').filter()" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}" />
+      <div class="flex justify-content-between mb-3 pretty-search">
+        <div class="flex align-items-center">
+          <i class="pr-3 si si-layout-bullets card-title-icon" />
+          <h2 class="m-0">Tasks</h2>
+        </div>
+        <h:panelGroup id="showAllTasksSwitch_container" styleClass="ml-auto inline-flex align-items-center"
+          layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
+          <h:outputText value="Show all" styleClass="mr-2" />
+          <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksIvyDevWfBean.tasksDataModel.showAll}"
+            disabled="#{!adminIvyDevWfBean.isWorkflowAdmin()}">
+            <p:ajax update="tasksForm" />
+          </p:toggleSwitch>
+        </h:panelGroup>
+        <p:tooltip for="showAllTasksSwitch_container" position="top"
+          value="If enabled shows all tasks, even the ones the user is not involved in" />
+        <div class="ui-input-icon-left filter-container ml-3">
+          <i class="pi pi-search" />
+          <p:inputText id="globalFilter" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}"
+            onkeyup="PF('tasksTable').filter()" />
+        </div>
       </div>
     </f:facet>
 
@@ -36,24 +53,24 @@
       </h:commandLink>
     </p:column>
 
-    <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}"
-      width="160" responsivePriority="3">
+    <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}" width="160"
+      responsivePriority="3">
       <jc:user user="#{task.activator}" />
     </p:column>
 
     <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" sortOrder="descending"
       responsivePriority="3" width="100">
-      <jc:time id="startTime" datetime="#{task.startTimestamp}"/>
+      <jc:time id="startTime" datetime="#{task.startTimestamp}" />
     </p:column>
 
     <p:column headerText="End" style="text-align: center;" sortBy="#{task.endTimestamp}" responsivePriority="4"
       width="100">
-      <jc:time id="endTime" datetime="#{task.endTimestamp}"/>
+      <jc:time id="endTime" datetime="#{task.endTimestamp}" />
     </p:column>
 
     <p:column styleClass="table-btn-1" responsivePriority="2" width="10">
-      <p:link href="#{task.detailUrl}" >
-        <i class="si si-information-circle detail-btn"/>
+      <p:link href="#{task.detailUrl}">
+        <i class="si si-information-circle detail-btn" />
       </p:link>
     </p:column>
   </p:dataTable>
