--- a/dev-workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userTable.xhtml
@@ -4,20 +4,23 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
   <h:form id="loginTable">
     <div class="card ui-fluid">
-      <div class="flex align-items-center mb-3">
-        <i class="pr-3 si si-login-3 card-title-icon"></i>
-        <h2 class="m-0">Login</h2>
-      </div>
-      <p>Click user to login</p>
       <p:dataTable id="users" var="user" value="#{loginTableIvyDevWfBean.users}" widgetVar="usersTable"
         emptyMessage="No users found with given criteria" selection="#{loginTableIvyDevWfBean.currentUser}"
         selectionMode="single" rowKey="#{user.fullname}">
         <p:ajax event="rowSelect" listener="#{loginIvyDevWfBean.loginFromTable}" />
         <f:facet name="header">
-          <div class="ui-input-icon-left filter-container">
-            <i class="pi pi-search"/>
-            <p:inputText id="globalFilter" value="#{loginTableIvyDevWfBean.globalFilter}"  onkeyup="PF('usersTable').filter()" placeholder="Search" />
+          <div class="flex justify-content-between pretty-search">
+            <div class="flex align-items-center">
+              <i class="pr-3 si si-login-3 card-title-icon"></i>
+              <h2 class="m-0">Login</h2>
+            </div>
+            <div class="ui-input-icon-left filter-container">
+              <i class="pi pi-search" />
+              <p:inputText id="globalFilter" placeholder="Search" value="#{loginTableIvyDevWfBean.globalFilter}"
+                onkeyup="PF('usersTable').filter()" />
+            </div>
           </div>
+          <p>Click user to login</p>
         </f:facet>
 
         <p:column headerText="Username" filterBy="#{user.name}" sortBy="#{user.name}" sortOrder="ascending">
@@ -30,8 +33,8 @@
           <h:outputText value="#{user.fullname}" />
         </p:column>
 
-        <p:column headerText="Roles" filterBy="#{user.roles}" sortBy="#{user.roles}"
-         filterStyle="display: none" colspan="2">
+        <p:column headerText="Roles" filterBy="#{user.roles}" sortBy="#{user.roles}" filterStyle="display: none"
+          colspan="2">
           <h:outputText value="#{user.roles}" />
         </p:column>
       </p:dataTable>
