--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -1,30 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
-  xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:pe="http://primefaces.org/ui/extensions" xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-    <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
-    <h:form id="tasksForm">
-      <div class="card">
-        <div class="flex align-items-center mb-3">
-          <i class="pr-3 si si-layout-bullets card-title-icon"></i>
-          <h2 class="m-0">Tasks</h2>
-          <h:panelGroup id="showAllTasksSwitch_container" styleClass="ml-auto inline-flex align-items-center"
-            layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
-            <h:outputText value="Show all" styleClass="mr-2"/>
-            <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksIvyDevWfBean.tasksDataModel.showAll}"
-              disabled="#{!adminIvyDevWfBean.isWorkflowAdmin()}">
-              <p:ajax update="tasksForm"/>
-            </p:toggleSwitch>
-          </h:panelGroup>
-          <p:tooltip for="showAllTasksSwitch_container" position="top"
-            value="If enabled shows all tasks, even the ones the user is not involved in"/>
+      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
+      <h:form id="tasksForm">
+        <div class="card">
+          <ui:include src="/includes/components/tasksTable.xhtml"/>
         </div>
-        <ui:include src="/includes/components/tasksTable.xhtml" />
-      </div>
-    </h:form>
+      </h:form>
     </ui:define>
   </ui:composition>
 </h:body>
